<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/osTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/os_version"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systemParameterTB" />

    <TextView
        android:id="@+id/doTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/developer_options"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/osTB" />

    <TextView
        android:id="@+id/dlTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/device_lock"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doTB" />

    <TextView
        android:id="@+id/vaTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/verified_applications"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dlTB" />

    <TextView
        android:id="@+id/wifiTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/network"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaTB" />

    <TextView
        android:id="@+id/systemParameterTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/system_parameters"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreOSTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/osscore"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTB" />

    <TextView
        android:id="@+id/scoreDOTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/doscore"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreOSTB" />

    <TextView
        android:id="@+id/scoreDLTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/dlscore"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDOTB" />

    <TextView
        android:id="@+id/scoreVATB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/vascore"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDLTB" />

    <TextView
        android:id="@+id/scoreNetTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/netscore"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreVATB" />

    <TextView
        android:id="@+id/scoreTPATB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tpascore"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreNetTB" />

    <CheckBox
        android:id="@+id/thirdpartyCB"
        android:layout_width="283dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/any_third_party_applications"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifiTB" />

    <TextView
        android:id="@+id/scoreCalcTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/to_calculate_the_security_score_press_check"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkSecurityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="584dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/check"
        android:textSize="20sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>